--- a/deker_mvc/deker_mvc.csproj
+++ b/deker_mvc/deker_mvc.csproj
@@ -543,9 +543,9 @@
       <Project>{f40c9efd-f1ae-40c3-ae76-65af170caa6c}</Project>
       <Name>Business</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DBEntity\DBEntity.csproj">
-      <Project>{5e47568e-2b14-452e-99b1-ed24312fae1d}</Project>
-      <Name>DBEntity</Name>
+    <ProjectReference Include="..\LinqEF\LinqEF.csproj">
+      <Project>{c8a6eefb-dfee-4342-8095-7e4f43902d7e}</Project>
+      <Name>LinqEF</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
