--- a/deker_mvc/bin/deker_mvc.dll.config
+++ b/deker_mvc/bin/deker_mvc.dll.config
@@ -10,7 +10,8 @@
   </configSections>
   <dataConfiguration defaultDatabase="localdb"/>
   <connectionStrings>
-    <add name="localdb" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql2012;User ID=sa;Password=123456;Initial Catalog=company2;" />
+    <!--<add name="localdb" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql2012;User ID=sa;Password=123456;Initial Catalog=company2;" />-->
+    <add name="localdb" providerName="System.Data.SqlClient" connectionString="Data Source=.;User ID=sa;Password=123456;Initial Catalog=company2;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -18,6 +19,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="imgPath" value="/Content/uploads/img/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
