--- a/deker_mvc/deker_mvc.csproj
+++ b/deker_mvc/deker_mvc.csproj
@@ -523,7 +523,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Shared\header.cshtml" />
-    <Content Include="Views\Shared\foot.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Contact\Index.cshtml" />
     <Content Include="Views\Solution\Index.cshtml" />
@@ -533,6 +532,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\uploads\img\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
