--- a/deker_mvc/Web.config
+++ b/deker_mvc/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <dataConfiguration defaultDatabase="localdb"/>
   <connectionStrings>
-    <!--<add name="localdb" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql2012;User ID=sa;Password=123456;Initial Catalog=company2;" />-->
-    <add name="localdb" providerName="System.Data.SqlClient" connectionString="Data Source=.;User ID=sa;Password=123456;Initial Catalog=company2;" />
+    <add name="localdb" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql2012;User ID=sa;Password=123456;Initial Catalog=company2;" />
+    <!--<add name="localdb" providerName="System.Data.SqlClient" connectionString="Data Source=.;User ID=sa;Password=123456;Initial Catalog=company2;" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
