--- a/deker_mvc/Web.config
+++ b/deker_mvc/Web.config
@@ -20,6 +20,22 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="imgPath" value="/Content/uploads/img/" />
+    <add key="vidioPath" value="/Content/uploads/vidio/" />
+    <add key="downPath" value="/Content/uploads/down/" />
+    <add key="htmlPath" value="/Content/uploads/html/" />
+    <add key="nopic" value="/images/nopic.jpg" />
+    <add key="title" value="--包装机械专家||包装机械专业制造商||中国包装机械优质出口商"/>
+    <add key="uid" value="admin" />
+    <add key="pwd" value="admin123" />
+    <add key="indexVidio" value="/Content/uploads/vidio/index.flv" />
+    <add key="talent" value="6" />
+    <add key="technical" value="7" />
+    <add key="solution" value="5" />
+    <add key="quetions" value="8" />
+    <add key="news" value="1" />
+    <add key="picSize" value="210x140" />
+    <add key="index_product" value="首页走马灯产品" />
+    <add key="index_headlines" value="首页新闻头条" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
