--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -42,9 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Article\ArticleMgr.cs" />
     <Compile Include="Common.cs" />
+    <Compile Include="Product\ProductMgr.cs" />
     <Compile Include="Product\RecommendProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlData\XmlMgr.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LinqEF\LinqEF.csproj">
