--- a/LinqEF/LinqEF.csproj
+++ b/LinqEF/LinqEF.csproj
@@ -51,6 +51,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="XmlDataEn.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
