--- a/LinqEF/app.config
+++ b/LinqEF/app.config
@@ -4,7 +4,10 @@
     </configSections>
     <connectionStrings>
         <add name="LinqEF.Properties.Settings.company2ConnectionString"
-            connectionString="Data Source=.\sql2012;Initial Catalog=company2;User ID=sa;Password=123456"
+            connectionString="Data Source=.;Initial Catalog=company2;User ID=sa;Password=123456"
+            providerName="System.Data.SqlClient" />
+        <add name="LinqEF.Properties.Settings.company2ConnectionString1"
+            connectionString="Data Source=.;Initial Catalog=company2;Persist Security Info=True;User ID=sa;Password=123456"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
