--- a/LinqEF/LinqEF.csproj
+++ b/LinqEF/LinqEF.csproj
@@ -52,6 +52,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="ReqEn\ReqBaseEn.cs" />
+    <Compile Include="ReqEn\ReqArticleEn.cs" />
     <Compile Include="ReqEn\ReqProductEn.cs" />
     <Compile Include="ResModel\ResponseBaseModel.cs" />
     <Compile Include="ResModel\ResponseItemModel.cs" />
