--- a/deker_mvc/deker_mvc.csproj
+++ b/deker_mvc/deker_mvc.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="BaseController.cs" />
+    <Compile Include="Controllers\Api\DownController.cs" />
     <Compile Include="Controllers\Api\ArticleController.cs" />
     <Compile Include="Controllers\Api\ProductController.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
@@ -401,6 +402,13 @@
     <Content Include="Content\uploads\datadownload\ab64f00a3664cf6e971bddc9816e84b4.jpg" />
     <Content Include="Content\uploads\datadownload\ab920c517862fa049481e209324b5850.jpg" />
     <Content Include="Content\uploads\datadownload\ac62e71e5f1737e30336b31a2fc28f2e.jpg" />
+    <Content Include="Content\uploads\img\2102.jpg" />
+    <Content Include="Content\uploads\img\210DK-1030.jpg" />
+    <Content Include="Content\uploads\img\210DK-2000component-counter.jpg" />
+    <Content Include="Content\uploads\img\210DK500D.jpg" />
+    <Content Include="Content\uploads\img\5580.jpg" />
+    <Content Include="Content\uploads\img\600ANEW.jpg" />
+    <Content Include="Content\uploads\img\634893455056835000DK-400S.jpg" />
     <Content Include="Content\XmlData\banner.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -458,6 +466,7 @@
     <Content Include="Images\icon_tel.png" />
     <Content Include="Images\language_icon.png" />
     <Content Include="Images\logo_kinco.png" />
+    <Content Include="Images\nopic.jpg" />
     <Content Include="Images\pic_solution_3c.png" />
     <Content Include="Images\pic_solution_3c_2.png" />
     <Content Include="Images\pic_solution_armarium.png" />
@@ -549,7 +558,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\uploads\img\" />
+    <Folder Include="Content\uploads\download\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
