--- a/deker_mvc/deker_mvc.csproj
+++ b/deker_mvc/deker_mvc.csproj
@@ -561,7 +561,8 @@
     <Content Include="Views\Solution\Detail.cshtml" />
     <Content Include="Views\Solution\test.cshtml" />
     <Content Include="Views\Home\Search.cshtml" />
-    <Content Include="Views\About\_Qualification.cshtml" />
+    <Content Include="Views\About\Qualification.cshtml" />
+    <Content Include="Views\Home\ProductList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
